--- a/docker/docker_freesurfer/docker-compose.yml
+++ b/docker/docker_freesurfer/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         SUBJECTS_DIR: /opt/freesurfer/static/practise_with_data
 #        MLFLOW_S3_ENDPOINT_URL: http://minio:9000
 #        AWS_ACCESS_KEY_ID: 'minio-id'
-##        AWS_SECRET_ACCESS_KEY: 'minio-key'
+##        AWS_SECRET_ACCESS_KEY: 'minio-key'+
 #      command: bash -c "chmod +x ./docker/launch.sh && ./docker/launch.sh"
 #  #    command: bash -c " flask run --host=0.0.0.0 --no-reload"
       networks:
