-mri routers added -template , sample for freesurfer samseg and recon

--- a/docker/docker_freesurfer/docker-compose.yml
+++ b/docker/docker_freesurfer/docker-compose.yml
@@ -10,13 +10,18 @@ services:
         dockerfile: Dockerfile
       ports:
         - "20:20"
-      volumes:
-        - mri-freesurfer-volume:/opt/freesurfer/static
 #      volumes:
+#        - mri-freesurfer-volume:/opt/freesurfer/static
 #        - type: bind
-#          source: ../../example_data
-#          target: /opt/freesurfer/static
-##          target: /opt/freesurfer/subjects/vistalab/freesurfer
+#            source: ../../example_data
+#            target: /opt/freesurfer/static
+#            target: /opt/freesurfer/subjects/vistalab/freesurfer
+      volumes:
+        - type: bind
+          source: ../../example_data
+          target: /opt/freesurfer/static
+        - mri-freesurfer-volume:/opt/freesurfer/static
+#          target: /opt/freesurfer/subjects/vistalab/freesurfer
       environment:
         SUBJECTS_DIR: /opt/freesurfer/static/practise_with_data
 #        MLFLOW_S3_ENDPOINT_URL: http://minio:9000
