- Fixes in ssh startup and missing keygen in freesurfer docker - Add username password in ssh

--- a/docker/docker_freesurfer/Dockerfile
+++ b/docker/docker_freesurfer/Dockerfile
@@ -2,9 +2,11 @@ FROM freesurfer/freesurfer:7.1.1
 COPY license.txt /usr/local/freesurfer/.license
 
 
-RUN yum -y install openssh-server openssh-clients
+RUN yum install openssh-server -y
 #RUN #systemctl start sshd
-
+RUN echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
+RUN echo "root:freesurferpwd" | chpasswd
+RUN ssh-keygen -A
 #RUN apt-get update
 #
 #RUN apt-get install openssh-server
