--- a/docker/docker_freesurfer/docker-compose.yml
+++ b/docker/docker_freesurfer/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         - mri-freesurfer-volume:/opt/freesurfer/static
       environment:
         SUBJECTS_DIR: /opt/freesurfer/static/practise_with_data
-
+      command: bash -c "/usr/sbin/sshd -D"
       networks:
         -  mri-freesurfer-network
 
