--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     hostname: analytics_backend
     container_name: analytics_backend
     restart: always
+    environment:
+      WFAddress: 127.0.0.1:8000
     ports:
       - "8000:8000"
