--- a/docker/docker_neurodesk/docker-compose.yml
+++ b/docker/docker_neurodesk/docker-compose.yml
@@ -15,6 +15,8 @@ services:
 #    image: 'vnmd/neurodesktop:20220329'
     networks:
       - mri-freesurfer-network
+    shm_size: 1gb
+
 
 #  neurodesktop:
 #      hostname: neurodesktop
