-Added function for creating jupyter notebook -Running paramiko as channel -Issue opened freeview cant be seen by user

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     hostname: analytics_backend
     container_name: analytics_backend
     restart: always
+    volumes:
+      - 'C:/neurodesktop-storage:/neurodesktop-storage'
     ports:
       - "8000:8000"
     networks:
