--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ mpld3==0.5.7
 paramiko==2.11.0
 pip-chill==1.0.1
 pmdarima==1.8.5
+pyedflib==0.1.30
 python-dotenv==0.19.2
 pyyaml==6.0
 uvicorn==0.17.5
