update hypothesis router AND utils_datalake.py added csv data for demo

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,18 @@ watchdog==2.1.9
 watchgod==0.7
 websockets==10.1
 yasa==0.6.1
+
+nbformat~=5.3.0
+mne~=1.0.1
+minio~=7.1.11
+starlette~=0.17.1
+matplotlib~=3.5.1
+numpy~=1.21.5
+lxml~=4.9.1
+pandas~=1.4.2
+requests~=2.27.1
+scipy~=1.8.0
+statsmodels~=0.13.2
+pip~=22.2.2
+scikit-learn~=1.0.2
+pydantic~=1.9.0
