--- a/docker/docker_production/Dockerfile
+++ b/docker/docker_production/Dockerfile
@@ -5,11 +5,11 @@ FROM python:3.10
 WORKDIR /data-analytics-and-visualisation-backend
 
 # install Project requirements
-COPY ./requirements.txt .
+COPY ../requirements.txt .
 RUN pip3 install --no-cache-dir --upgrade -r requirements.txt
 
 # copy contents to container automatic-forensic-tool
-ADD . .
+ADD .. .
 
 #
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
