Working changes for prod env

--- a/docker/docker_production/docker-compose.yml
+++ b/docker/docker_production/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.7'
 services:
   analytics-backend:
     build:
-      context: ".."
-      dockerfile: ./docker/Dockerfile
+      context: "../../"
+      dockerfile: ./docker/docker_production/Dockerfile
     hostname: analytics_backend
     container_name: analytics_backend
     restart: always
