-Change to use new EDFbrowser application for eeg viewer -Add default and automatic installation of EDFbrowser

--- a/docker/docker_neurodesk/Dockerfile
+++ b/docker/docker_neurodesk/Dockerfile
@@ -1,16 +1,10 @@
 FROM vnmd/neurodesktop:20220329
-# De nomizo na xreiazetai license alla na xreiazete prepei na to fereis, trejto xoris kai me to xeri
-#COPY license.txt /usr/local/freesurfer/.license
 
-# Nomizo trexei kai me auto
-#RUN apt-get update
-#RUN apt-get install openssh-server
-
-#Opos to proigoumeno
-#RUN yum install openssh-server -y
-#RUN echo "PasswordAuthentication yes" >> /etc/ssh/sshd_config
-#RUN echo "root:freesurferpwd" | chpasswd
-#RUN ssh-keygen -A
-#EXPOSE 22
+RUN sudo apt update
+RUN sudo apt -y install g++ make git qtbase5-dev-tools qtbase5-dev
+RUN git clone https://gitlab.com/Teuniz/EDFbrowser.git /home/user/EDFbrowser
+RUN cd /home/user/EDFbrowser && qmake
+RUN cd /home/user/EDFbrowser && make -j4
+RUN cd /home/user/EDFbrowser && sudo make install
 
 CMD tail -f /dev/null
