-Updated requirements.txt to previous version with pip chill -Changed location of opening EDFbrowser to help user experience

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ fastapi==0.74.0
 freesurfer-stats==1.2.1
 httptools==0.3.0
 jupyter==1.0.0
+minio==7.1.12
+mne-qt-browser==0.4.0
 mpld3==0.5.7
 paramiko==2.11.0
 pip-chill==1.0.1
 pmdarima==1.8.5
 pyactigraphy==1.0
 pyedflib==0.1.30
+pyqt5==5.15.7
 pyreadstat==1.1.9
 python-dotenv==0.19.2
 pywavelets==1.4.1
@@ -17,18 +20,3 @@ watchdog==2.1.9
 watchgod==0.7
 websockets==10.1
 yasa==0.6.1
-
-nbformat~=5.3.0
-mne~=1.0.1
-minio~=7.1.11
-starlette~=0.17.1
-matplotlib~=3.5.1
-numpy~=1.21.5
-lxml~=4.9.1
-pandas~=1.4.2
-requests~=2.27.1
-scipy~=1.8.0
-statsmodels~=0.13.2
-pip~=22.2.2
-scikit-learn~=1.0.2
-pydantic~=1.9.0
