-Fix from production environments, now files working correctly -Checking bug for reading display id of neurodesk unsure is actua lbug or system issue

--- a/docker/docker_production/Dockerfile
+++ b/docker/docker_production/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.10
 WORKDIR /data-analytics-and-visualisation-backend
 
 # install Project requirements
-COPY ../requirements.txt .
+COPY ../../requirements.txt .
 RUN pip3 install --no-cache-dir --upgrade -r requirements.txt
 
 # copy contents to container automatic-forensic-tool
