--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.74.0
 freesurfer-stats==1.2.1
 httptools==0.3.0
 jupyter==1.0.0
+lifelines==0.27.3
 lxml==4.9.1
 mpld3==0.5.7
 paramiko==2.11.0
@@ -10,9 +11,11 @@ pip-chill==1.0.1
 pmdarima==1.8.5
 pyedflib==0.1.30
 python-dotenv==0.19.2
+pywavelets==1.4.1
 pyyaml==6.0
 uvicorn==0.17.5
 watchdog==2.1.9
 watchgod==0.7
 websockets==10.1
 yasa==0.6.1
+zepid==0.9.1
