-Change requests from temp frontend -Changed routers communication -Added frontend env variable -Added vvarious comments in old functions -Info.json no longer created in folder - may change in the future

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     environment:
       WFAddress: expertsystem_web_1
       NeurodesktopStorageLocation: /neurodesktop-storage
+      FrontendAddress: http://localhost:3000
     volumes:
       - '/neurodesktop-storage:/neurodesktop-storage'
     ports:
