-Fix for local docker compose -Fix for reading neurodesktop id -Added correct configuration for retrieving edf files for functions for list_channels and autocorrelation -(WIP) other functions

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       NeurodesktopStorageLocation: /neurodesktop-storage
       FrontendAddress: http://localhost:3000
     volumes:
-      - '/neurodesktop-storage:/neurodesktop-storage'
+      - 'C:\neurodesktop-storage:/neurodesktop-storage'
     ports:
       - "8000:8000"
     networks:
