--- a/docker/docker_production/docker-compose.yml
+++ b/docker/docker_production/docker-compose.yml
@@ -22,9 +22,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - neurodesk-volume:/MES-CoBraD Input
-      - 'C:/neurodesktop-storage:/neurodesktop-storage'
+      - '/home/ntua/neurodesktop-storage:/neurodesktop-storage'
     ports:
-      - '8080:8080'
+      - '8081:8080'
     networks:
       - mri-freesurfer-network
     shm_size: 1gb
@@ -42,7 +42,7 @@ services:
       NeurodesktopPort: 8081
       FrontendAddress: http://10.129.150.120:3005
     volumes:
-      - '/home/ntua/neurodesktop-storage:/neurodesktop-storag'
+      - '/home/ntua/neurodesktop-storage:/neurodesktop-storage'
     ports:
       - "7000:8000"
     depends_on:
