--- a/docker/docker_production/docker-compose.yml
+++ b/docker/docker_production/docker-compose.yml
@@ -8,6 +8,10 @@ services:
     ports:
       - 85:80
       - 470:443
+      - 472:444
+      - 471:445
+      - 473:446
+      - 474:447
     depends_on:
       - analytics-backend
     networks:
@@ -38,7 +42,7 @@ services:
     restart: always
     environment:
       WFAddress: expertsystem_web_1
-      NeurodesktopStorageLocation: /home/ntua/neurodesktop-storage
+      NeurodesktopStorageLocation: /neurodesktop-storage
       NeurodesktopPort: 8081
       FrontendAddress: http://10.129.150.120:3005
     volumes:
