--- a/docker/docker_production/docker-compose.yml
+++ b/docker/docker_production/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     container_name: analytics_backend
     restart: always
     environment:
-      WFAddress: expertsystem_web_1
+      WFAddress: https://esbk.platform.mes-cobrad.eu
       NeurodesktopStorageLocation: /neurodesktop-storage
       NeurodesktopPort: 8081
       FrontendAddress: http://10.129.150.120:3005
