-various fixes -Docker compose file ip and names -Changed location of many created plots in correct spots -Back average producing for single channel -Autocorrelation added plots

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - mri-freesurfer-network
     shm_size: 1gb
 
-  cd:
+  analytics-backend:
     build:
       context: ".."
       dockerfile: ./docker/Dockerfile
@@ -27,7 +27,7 @@ services:
       WFAddress: expertsystem_web_1
       NeurodesktopStorageLocation: /neurodesktop-storage
       NeurodesktopPort: 8080
-      FrontendAddress: http://localhost:3000
+      FrontendAddress: http://localhost:3005
     volumes:
       - 'C:\neurodesktop-storage:/neurodesktop-storage'
     ports:
