--- a/docker/docker_production/docker-compose.yml
+++ b/docker/docker_production/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       WFAddress: https://esbk.platform.mes-cobrad.eu
       NeurodesktopStorageLocation: /neurodesktop-storage
       NeurodesktopPort: 8081
-      FrontendAddress: http://10.129.150.120:3005
+      FrontendAddress: https://analytics.platform.mes-cobrad.eu
     volumes:
       - '/home/ntua/neurodesktop-storage:/neurodesktop-storage'
     ports:
