Minor changes nginx

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,6 +3,14 @@ events {
 }
 
 http {
+    upstream node_backend {
+      zone upstreams 64K;
+      server 10.129.150.120:7000 max_fails=1 fail_timeout=2s;
+      server 10.129.150.120:3005 max_fails=1 fail_timeout=2s;
+      server 10.129.150.120:8081 max_fails=1 fail_timeout=2s;
+      keepalive 6;
+    }
+    
     server {
             listen 80 default_server;
             listen [::]:80 default_server;
@@ -16,7 +24,9 @@ http {
             ssl_certificate_key /etc/nginx/certificate/nginx.key;
             server_name analyticsbk.platform.mes-cobrad.eu;
             location / {
-                proxy_pass http://10.129.150.120:7000;
+                proxy_http_version 1.1;
+		proxy_set_header   "Connection" "";
+		proxy_pass http://10.129.150.120:7000;
 #		add_header 'Access-Control-Allow-Origin' '*';
 #                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 #                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
@@ -28,7 +38,7 @@ http {
             listen [::]:445 ssl default_server;
             ssl_certificate /etc/nginx/certificate/nginx-certificate.crt;
             ssl_certificate_key /etc/nginx/certificate/nginx.key;
-            server_name _;
+            server_name qbbk.platform.mes-cobrad.eu;
             location / {
                 proxy_pass http://10.129.150.120:8000;
 #		add_header 'Access-Control-Allow-Origin' '*';
@@ -44,7 +54,9 @@ http {
             ssl_certificate_key /etc/nginx/certificate/nginx.key;
             server_name _;
             location / {
-                proxy_pass http://10.129.150.120:3005;
+                proxy_http_version 1.1;
+                proxy_set_header   "Connection" "";
+		proxy_pass http://10.129.150.120:3005;
 #		add_header 'Access-Control-Allow-Origin' '*';
   #              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
   #              add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
@@ -58,7 +70,10 @@ http {
             ssl_certificate_key /etc/nginx/certificate/nginx.key;
             server_name _;
             location / {
-                proxy_pass http://10.129.150.120:8081;
+                proxy_http_version 1.1;
+                proxy_set_header   "Connection" "";
+		proxy_pass http://10.129.150.120:8081;
+#		location = /basic_status { stub_status; }
 #		add_header 'Access-Control-Allow-Origin' '*';
    #             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
    #             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
