--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rtree==1.0.1
 spykeutils==0.4.3
+sqlalchemy==1.4.46
 tables==3.8.0
 textdistance==4.5.0
 three-merge==0.1.1
