From Prod changes

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -66,12 +66,13 @@ http {
     server {
             listen 446 ssl;
             listen [::]:446 ssl;
-            ssl_certificate /etc/nginx/certificate/nginx-certificate.crt;
-            ssl_certificate_key /etc/nginx/certificate/nginx.key;
-            server_name _;
+            ssl_certificate /etc/nginx/certificate/fullchain.pem;
+            ssl_certificate_key /etc/nginx/certificate/privkey.pem;
+            server_name gui.platform.mes-cobrad.eu;
             location / {
                 proxy_http_version 1.1;
-                proxy_set_header   "Connection" "";
+                proxy_set_header Host $host;
+		proxy_redirect off;
 		proxy_pass http://10.129.150.120:8081;
 #		location = /basic_status { stub_status; }
 #		add_header 'Access-Control-Allow-Origin' '*';
