Updated dockerfiels for new neurodesk Kept old ones as is due to many changes-

--- a/docker/docker_neurodesk/docker_neurodesk_production/docker-compose-updated.yml
+++ b/docker/docker_neurodesk/docker_neurodesk_production/docker-compose-updated.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   neurodesktop:
+    user: root
     privileged: true
     container_name: neurodesktop
     build:
@@ -9,9 +10,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - neurodesk-volume:/MES-CoBraD Input
-      - 'C:/neurodesktop-storage:/neurodesktop-storage'
+      - '/home/ntua/neurodesktop-storage:/neurodesktop-storage'
     ports:
-      - '8888:8888'
+      - '8080:8080'
     networks:
       - mri-freesurfer-network
     shm_size: 1gb
