--- a/docker/docker_neurodesk/docker-compose-updated.yml
+++ b/docker/docker_neurodesk/docker-compose-updated.yml
@@ -2,11 +2,12 @@ version: '3.7'
 
 services:
   neurodesktop:
+    user: root
     privileged: true
     container_name: neurodesktop
     build:
       context: "."
-      dockerfile: Dockerfile
+      dockerfile: DockerfileUpdated
     volumes:
       - neurodesk-volume:/MES-CoBraD Input
       - 'C:/neurodesktop-storage:/neurodesktop-storage'
