--- a/docker/docker_neurodesk/docker-compose.yml
+++ b/docker/docker_neurodesk/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   neurodesktop:
+#    user: root
     privileged: true
     container_name: neurodesktop
     build:
@@ -12,6 +13,7 @@ services:
       - 'C:/neurodesktop-storage:/neurodesktop-storage'
     ports:
       - '8888:8888'
+      - '8080:8080'
     networks:
       - mri-freesurfer-network
     shm_size: 1gb
