--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ local.properties
 
 # User-specific stuff
 .idea/*
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
