--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,9 +5,9 @@ events {
 http {
     upstream node_backend {
       zone upstreams 64K;
-      server 10.129.150.120:7000 max_fails=1 fail_timeout=2s;
-      server 10.129.150.120:3005 max_fails=1 fail_timeout=2s;
-      server 10.129.150.120:8081 max_fails=1 fail_timeout=2s;
+      server analytics-backend:8000 max_fails=1 fail_timeout=2s;
+   #   server 10.129.150.120:3005 max_fails=1 fail_timeout=2s;
+   #   server 10.129.150.120:8081 max_fails=1 fail_timeout=2s;
       keepalive 6;
     }
     
@@ -16,6 +16,15 @@ http {
             listen [::]:80 default_server;
             server_name _;
             return 301 https://$host$request_uri;
+#	     location / {
+#                proxy_http_version 1.1;
+#                proxy_set_header   "Connection" "";
+#                proxy_pass http://gpu.epu.ntua.gr:7000;
+#               add_header 'Access-Control-Allow-Origin' '*';
+#                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+#                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+#                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+#            }
     }
     server {
             listen 443 ssl default_server;
@@ -26,7 +35,7 @@ http {
             location / {
                 proxy_http_version 1.1;
 		proxy_set_header   "Connection" "";
-		proxy_pass http://10.129.150.120:7000;
+		proxy_pass http://analytics-backend:8000;
 #		add_header 'Access-Control-Allow-Origin' '*';
 #                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
 #                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
