-fixed version neurodesk -ADded calls fixed

--- a/docker/docker_neurodesk/Dockerfile
+++ b/docker/docker_neurodesk/Dockerfile
@@ -1,5 +1,7 @@
 #FROM vnmd/neurodesktop:2024-01-11
-FROM vnmd/neurodesktop:20220329
+#FROM vnmd/neurodesktop:20220329
+FROM vnmd/neurodesktop:20230112
+
 #docker pull vnmd/neurodesktop:2024-01-12
 RUN sudo apt update
 RUN sudo apt -y install g++ make git qtbase5-dev-tools qtbase5-dev
