--- a/docker/docker_neurodesk/docker_neurodesk_production/updated/DockerfileUpdated
+++ b/docker/docker_neurodesk/docker_neurodesk_production/updated/DockerfileUpdated
@@ -1,4 +1,5 @@
-FROM vnmd/neurodesktop:2024-01-11
+FROM vnmd/neurodesktop:20230112
+
 #FROM vnmd/neurodesktop:20220329
 #docker pull vnmd/neurodesktop:2024-01-12
 RUN sudo apt update
