--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ atomicwrites==1.4.1
 autopep8==1.6.0
 binaryornot==0.4.4
 black==23.1.0
-captum==0.7.0
+#captum==0.7.0
 cloudpickle==2.2.1
 contourpy==1.0.6
 edflib-python==1.0.6
@@ -13,6 +13,7 @@ flake8==6.0.0
 fqdn==1.5.1
 freesurfer-stats==1.2.1
 ggseg==0.1
+grad-cam==1.5.0
 graphviz==0.20.1
 guidata==2.3.1
 httptools==0.3.0
