Fix docker issue with depndencies of cv2

--- a/docker/docker_production_ntua/Dockerfile
+++ b/docker/docker_production_ntua/Dockerfile
@@ -3,10 +3,12 @@ FROM python:3.10
 
 # set working directory
 WORKDIR /data-analytics-and-visualisation-backend
-
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
 # install Project requirements
 COPY ../../requirements.txt .
-RUN yum -y install mesa-libGL
+#RUN apt update
+#RUN apt install -y libgl1-mesa-glx
+#RUN yum -y install mesa-libGL
 RUN pip3 install --no-cache-dir --upgrade pip
 RUN pip3 install --no-cache-dir --upgrade numpy==1.22.4
 RUN #pip3 install --no-cache-dir --upgrade numpy==1.21.6
@@ -14,6 +16,7 @@ RUN pip3 install --no-cache-dir --upgrade scipy==1.7.3
 RUN pip3 install --no-cache-dir --upgrade Cython==0.29.32
 RUN pip3 install --no-cache-dir --upgrade scikit-learn==1.0.1 --no-build-isolation
 RUN pip3 install --no-cache-dir --upgrade semopy==2.3.10
+#RUN pip3 install --no-cache-dir --upgrade opencv-python-headless==4.9.0.80
 RUN pip3 install --no-cache-dir --upgrade --no-build-isolation -r requirements.txt
 
 # copy contents to container automatic-forensic-tool
