--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pyreadstat==1.1.9
 pytest==7.4.0
 python-dotenv==0.19.2
 python-lsp-server==1.7.1
+python-keycloak==3.12.0
 python-slugify==8.0.1
 pythonqwt==0.10.2
 pytoolconfig==1.2.5
