--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ black==23.1.0
 cloudpickle==2.2.1
 contourpy==1.0.6
 edflib-python==1.0.6
+edfio==0.4.2
 factor-analyzer==0.4.1
 fastapi==0.74.0
 fastparquet==2023.2.0
@@ -71,5 +72,5 @@ webcolors==1.12
 websockets==10.1
 whatthepatch==1.0.4
 yapf==0.32.0
-yasa==0.6.1
+yasa==0.6.4
 zepid==0.9.1
