--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ qtawesome==1.2.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rtree==1.0.1
+shap==0.45.1
 semopy
 spykeutils==0.4.3
 sqlalchemy==1.4.46
