-FIXED TORCHVISSION ERROR in imports, added specific version with torch -various code improvements

--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ tables==3.8.0
 textdistance==4.5.0
 three-merge==0.1.1
 torch==2.2.2
+torchvision==0.17.2
 trino==0.326.0
 uri-template==1.2.0
 uvicorn==0.17.5
